--- a/DynastyApp/src/app/components/nfl-news/nfl-news.component.css
+++ b/DynastyApp/src/app/components/nfl-news/nfl-news.component.css
@@ -1,10 +1,3 @@
-.row {
-    background-color: silver;
-}
-
-.container {
-    display: block;
-    height: 500px;
-    width: 500px;
-    padding: 2em;
+.full-width {
+    width: 100%;
 }
